--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -162,6 +162,27 @@ p {
     padding-right: 3em;
   }
 }
+@media (min-width: 1400px) {
+  .pd-lr {
+    padding-left: 4em;
+    padding-right: 4em;
+  }
+}
+@media (min-width: 1600px) {
+  .pd-lr {
+    padding-left: 10em;
+    padding-right: 10em;
+  }
+}
+@media (min-width: 1800px) {
+  .pd-lr {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
 /* Hero */
 .hero {
   width: 100%;
@@ -229,6 +250,17 @@ p {
     margin-bottom: 1em;
   }
 }
+@media (min-width: 1400px) {
+  .hero {
+    height: 100vh;
+  }
+  .hero .in {
+    width: 50%;
+  }
+  .hero .in h3 {
+    width: 100%;
+  }
+}
 /* Aromatizantes */
 .aromatizantes {
   width: 100%;
@@ -294,6 +326,8 @@ p {
 .aromatizantes .selector {
   position: relative;
   overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
 }
 .aromatizantes .selector::before {
   position: absolute;
@@ -318,6 +352,7 @@ p {
   justify-content: flex-start;
   overflow-x: scroll;
   overflow-y: hidden;
+  box-sizing: border-box;
   cursor: move;
   padding-top: 30px;
   padding-bottom: 34px;
@@ -392,13 +427,25 @@ p {
     box-sizing: border-box;
     padding-bottom: 1.8em;
   }
-  .aromatizantes .selector::before {
-    padding-top: 7.5%;
-  }
-  .aromatizantes .selector .in {
+  .aromatizantes .selector {
     margin-left: auto;
     margin-right: auto;
-    width: 86%;
+    width: 84%;
+  }
+  .aromatizantes .selector::before {
+    padding-top: 9.5%;
+  }
+  .aromatizantes .selector .in {
+    width: 100%;
+    padding-top: 30px;
+    padding-bottom: 44px;
+  }
+  .aromatizantes .selector .in .item {
+    padding-left: 36px;
+    padding-right: 36px;
+  }
+  .aromatizantes .selector .in .item:first-child {
+    padding-left: 8px;
   }
 }
 @media (min-width: 900px) {
@@ -406,15 +453,24 @@ p {
     height: 400px;
   }
   .aromatizantes .aroma-info .aroma-data .item-data {
-    margin-top: -32%;
+    margin-top: -30%;
     width: 80%;
   }
   .aromatizantes .aroma-info .aroma-data .item-data .img img {
-    width: 60%;
+    width: 64%;
+  }
+  .aromatizantes .selector {
+    width: 78%;
+  }
+  .aromatizantes .selector .in {
+    width: 100%;
   }
   .aromatizantes .selector .in .item {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 52px;
+    padding-right: 52px;
+  }
+  .aromatizantes .selector .in .item:first-child {
+    padding-left: 22px;
   }
 }
 @media (min-width: 1200px) {
@@ -425,6 +481,75 @@ p {
   .aromatizantes .aroma-info .aroma-data .item-data .text {
     width: 62%;
     padding-bottom: 2.2em;
+  }
+  .aromatizantes .selector {
+    width: 74%;
+  }
+  .aromatizantes .selector::before {
+    padding-top: 7.5%;
+  }
+  .aromatizantes .selector .in {
+    width: 100%;
+  }
+  .aromatizantes .selector .in .item {
+    padding-left: 54px;
+    padding-right: 54px;
+  }
+}
+@media (min-width: 1400px) {
+  .aromatizantes .aroma-info .aroma-data .item-data {
+    margin-top: -26%;
+    width: 74%;
+  }
+  .aromatizantes .aroma-info .aroma-data .item-data .img img {
+    width: 56%;
+  }
+  .aromatizantes .aroma-info .aroma-data .item-data .text {
+    width: 62%;
+    padding-bottom: 2.2em;
+  }
+  .aromatizantes .selector {
+    width: 70%;
+  }
+  .aromatizantes .selector .in {
+    padding-top: 32px;
+    padding-bottom: 48px;
+  }
+  .aromatizantes .selector .in .item {
+    padding-left: 54px;
+    padding-right: 54px;
+  }
+}
+@media (min-width: 1600px) {
+  .aromatizantes .aroma-info .aroma-img {
+    height: 480px;
+  }
+  .aromatizantes .aroma-info .aroma-data.pd-lr {
+    max-width: 100%;
+    padding-left: 10em;
+    padding-right: 10em;
+  }
+  .aromatizantes .aroma-info .aroma-data .item-data {
+    margin-top: -23%;
+    width: 74%;
+  }
+  .aromatizantes .aroma-info .aroma-data .item-data .img img {
+    width: 48%;
+  }
+  .aromatizantes .aroma-info .aroma-data .item-data .text {
+    width: 62%;
+    padding-right: 12%;
+    padding-bottom: 2.2em;
+  }
+  .aromatizantes .selector::before {
+    padding-top: 5.5%;
+  }
+  .aromatizantes .selector .in .item {
+    padding-left: 54px;
+    padding-right: 54px;
+  }
+  .aromatizantes .selector .in .item:last-child {
+    padding-right: 160px;
   }
 }
 /* Columns: Automatico, Eléctrico, Lustramuebles, Renovadores */
