--- a/assets/sass/app.sass
+++ b/assets/sass/app.sass
@@ -220,6 +220,15 @@ p
                 width: 100%
         .on
 
+// @keyframes movearom
+//     0%
+//         top: 120px
+//     100%
+//         top: 0px
+
+// .movearom
+//     animation: movearom 1s ease forwards
+
 /* Aromatizantes
 .aromatizantes
     width: 100%
@@ -733,6 +742,15 @@ p
                 height: 100%
                 z-index: 1
                 background: linear-gradient(180deg, rgba(250, 250, 250, 0) 33.43%, #FAFAFA 88.16%)
+            .img
+                z-index: 1
+                width: 210px
+                height: 240px
+                background-size: cover
+                background-repeat: no-repeat
+                background-position: center
+                transition: all ease 0.3s
+                // background-image: url('../img/automaticos/1.png')
             img
                 position: relative
                 z-index: 2
@@ -835,6 +853,16 @@ p
             .header
                 img
                     margin-left: -6px
+                .img
+                    background-image: url('../img/automaticos/1.png')
+                    &.a-lavanda
+                        background-image: url('../img/automaticos/item-lavanda.png')
+                    &.a-manzana
+                        background-image: url('../img/automaticos/item-manzana.png')
+                    &.a-bebe
+                        background-image: url('../img/automaticos/item-bebe.png')
+                    &.a-brisa
+                        background-image: url('../img/automaticos/item-brisa.png')
                 .badges
                     position: absolute
                     width: 100%
@@ -872,6 +900,16 @@ p
         &.electricos
             .header
                 img
+                .img
+                    background-image: url('../img/electricos/1.png')
+                    &.e-lavanda
+                        background-image: url('../img/electricos/item-lavanda.png')
+                    &.e-manzana
+                        background-image: url('../img/electricos/item-manzana.png')
+                    &.e-bebe
+                        background-image: url('../img/electricos/item-bebe.png')
+                    &.e-brisa
+                        background-image: url('../img/electricos/item-brisa.png')
                 .badges
                     position: absolute
                     width: 100%
@@ -1143,7 +1181,7 @@ p
             // background-color: $lightGray
             .header
                 // width: 100%
-                height: 420px
+                height: 380px
                 // position: relative
                 // display: flex
                 // justify-content: center
@@ -1250,7 +1288,7 @@ p
             // background-color: $lightGray
             .header
                 // width: 100%
-                height: 420px
+                // height: 380px
                 // position: relative
                 // display: flex
                 // justify-content: center
@@ -1356,7 +1394,7 @@ p
             // background-color: $lightGray
             .header
                 // width: 100%
-                height: 420px
+                // height: 420px
                 // position: relative
                 // display: flex
                 // justify-content: center
